--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -2,6 +2,12 @@
   margin: 0;
   padding: 0;
 }
+
+.main{
+  text-align: center;
+  width:100%;
+}
+
 .centred_track_container {
   align-items: center;
   justify-content: center;
@@ -13,17 +19,21 @@
 
 .text_centred {
   font-weight: 700;
-  font-size: 30px;
+  font-size: 40px;
+}
+.cardList-header__text{
+  font-weight: 700;
+  font-size: 20px;
 }
 
 .h1 {
   margin-top: 10%;
-  font-size: 50px;
+  font-size: 60px;
 }
 
-.underline {
+.cardList-header__underline {
   margin: 20px auto;
-  width: 40%;
+  width: 5%;
   border-bottom: 2px solid brown;
 }
 
