--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,8 @@ html,body{
 
 .App{
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
+  /* flex-wrap: wrap; */
   align-content: flex-start;
   width:100%;
   height:100%;
