--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -5,21 +5,23 @@ footer {
   background-color: black;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center
+  flex : 0 0 auto;
+  justify-content: center;
 }
 
-.topContainer{
-    width: 90%;
+.topContainer {
+  margin-top: 5%;
+  width: 90%;
 }
 
 .about {
-  display:grid;
+  display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   text-align: left;
 }
 .about-block-link__item {
-    color:white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 .about-block__header {
@@ -31,23 +33,23 @@ footer {
   border-bottom: 2px solid gray;
 }
 
-.bottomContainer{
-    margin-top: 2%;
-    width: 90%;
-    display: flex;
+.bottomContainer {
+  margin-top: 2%;
+  width: 90%;
+  display: flex;
 }
 
-.footer-logo{
- display: flex;
- flex-wrap: wrap;
- justify-content: flex-end;
+.footer-logo {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
 }
 
 .language {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start
+  justify-content: flex-start;
 }
 
 .language-list {
@@ -74,9 +76,8 @@ footer {
   color: white;
 }
 .time_zone {
-    color: gray;
-  }
-  
+  color: gray;
+}
 
 /* .lang a,
 
