--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,4 +1,5 @@
 .header {
+  flex : 0 0 auto;
   width: 100%;
   height: 50px;
   background-color: black;
@@ -36,4 +37,9 @@
 }
 .nav-list__item{
   display: inline;
+}
+
+
+.href__img{
+  margin-right: 5px;
 }
