--- a/src/Components/Search/Search.css
+++ b/src/Components/Search/Search.css
@@ -1,12 +1,14 @@
 .search {
   width: 100%;
+  flex:1 0 auto;
 }
 
 .search-header {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  margin-left: 10%;
+  padding-left: 10%;
+  box-sizing: border-box;
 }
 
 .search-header__text {
@@ -100,4 +102,9 @@ input[type="radio"]:checked + label {
 .result-list-tracks{
     display: flex;
     flex-wrap: wrap;
+}
+
+.result-header{
+  margin: 5% 0 5% 0;
+  font-weight: 300;
 }
